@@ -1,6 +1,7 @@
 <h5>3.05 RC1   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
  - fixed bug with l\trim (alain/goffy)
+ - implemented additional prebuilding check  (goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
